tests/reference/asr-array_04-5864f91.stderr
semantic error: Type member a is not an array so it cannot be indexed.
 --> tests/errors/array_04.f90:8:1
  |
8 | b%a(:) = 1
  | ^^^^^^ 
